# COMP10050-Software_Engineering_Project1_Assignments

./: README.md
Assignment 1/: CMakeLists.txt  Identify_anagram.c  Identify_anagram.h  input.c  input.h  main.c  miss_anagram.c  miss_anagram.h  output.txt  sortout.c  sortout.h
Assignment2/: README.doc
Assignment2/untitled7/: CMakeLists.txt  game_init.c  game_init.h  input_output.c  input_output.h  logic.c  logic.h  main.c
Assignment3_19353281/: CMakeLists.txt  avg_and_max.c  avg_and_max.h  main.c
